# SimonsSchool

./: README.md
test01/: CMakeLists.txt  myexample.cpp  mytest01.cpp
test02/: CMakeLists.txt  myexample.cpp  myexample.hpp  mytest01.cpp
